# cs180_final

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
glad/include/glad/: glad.h
shaders/: deferred_geometry.fs  deferred_geometry.vs  deferred_light.fs  deferred_light.vs  forward_light.fs  forward_light.vs  forward_model.fs  fragDeferredGeometry.fs  fragDeferredLight.fs  fragment.fs  lightfrag.fs  vertLight.vs  vertModel.vs  vertex.vs
src/: CMakeLists.txt  Renderer.cpp  Renderer.h  glad.c  light.cpp  light.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  scene.h  shader.cpp  shader.h
